<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_activity"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_grey">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@mipmap/image_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/string_title"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="6dp">

            <Button
                android:id="@+id/scene_design_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_checked_no"
                android:text="@string/string_scene_design"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/type_design_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_checked_no"
                android:text="@string/string_type_design" />

            <Button
                android:id="@+id/cem_design_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_checked_no"
                android:text="@string/string_cem_design" />

            <Button
                android:id="@+id/begin_calculate_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/bg_checked_no"
                android:text="@string/string_begin_calculate" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />

            <ImageView
                android:id="@+id/first_image"
                android:background="@color/bg_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@mipmap/image_single" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
